Avoid the black flickering when clicking a bookmark

--- a/packages/core/src/styles/inner.less
+++ b/packages/core/src/styles/inner.less
@@ -24,5 +24,6 @@
 }
 
 .rpv-core-inner-page {
+    background: #fff;
     padding: 8px;
 }
